modified modal animation and fixed horizontal overflow on mobile devices

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -101,6 +101,7 @@
     #resume-link i {
         font-size: 20px;
         padding: 10px;
+        cursor: pointer;
     }
     
     .fa {
